--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -625,7 +625,7 @@
                     var listHeight = this.$.list.getBoundingClientRect().height;
                     if (listHeight != 0) {
                         var n = listHeight / 30;
-                        this.set('pageSize', parseInt(Math.floor(n)))
+                        this.set('pageSize', parseInt(Math.floor(n)));
                     }
                 }, 150);
             },
