--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -177,10 +177,10 @@
 
         <template is="dom-if" if="{{computeHeader(viewMode)}}">
             <div id="header" class="horizontal layout center">
-                <i class="fa fa-sort" on-click="changeSort" data-sort="createdAt" title="Date sort" style="margin-right:2px;"></i>
+                <!-- <i class="fa fa-sort" on-click="changeSort" data-sort="createdAt" title="Date sort" style="margin-right:2px;"></i> -->
                 <div hidden="{{hideFileColumn}}" class="flex" data-sortorder$="{{_sortOrder(sort,sortASC,'name')}}" data-sort="name" on-click="changeSort">Name</div>
                 <template is="dom-repeat" items="{{columns}}" as="column">
-                    <div style$="width:{{column.width}}px;" class$="col" data-sortorder$="{{_sortOrder(sort,sortASC,column.name)}}" data-sort$="{{column.name}}" on-click="changeSort">{{column.title}}</div>
+                    <div style$="width:{{compColumTitleWidth(column)}}px;" class$="col" data-sortorder$="{{_sortOrder(sort,sortASC,column.name)}}" data-sort$="{{column.name}}" on-click="changeSort">{{column.title}}</div>
                 </template>
             </div>
         </template>
@@ -323,6 +323,16 @@
                 this.fileBelongsToJob = {};
             },
             ready: function() {},
+
+            refreshFolderList: function() {
+                var aux = [];
+                for (var i = 0; i < this.columns.length; i++) {
+                    var c = this.columns[i];
+                    aux.push(c);
+                };
+                this.set('columns', aux);
+            },
+
             handleUploadFile: function(e) {
                 this.set('selected', null);
                 this.fire('upload-file');
@@ -446,10 +456,11 @@
                         if (type === "ALL") {
                             checkType = true;
                         } else if (type === "JOB") {
-
-                            checkType = (item.job && item.job !== null);
-                        } else if (type === "FILE" || type === "FOLDER") {
-                            checkType = (item.type === type);
+                            checkType = (item.job != null);
+                        } else if (type === "FILE") {
+                            checkType = (item.type == 'FILE');
+                        } else if (type === "FOLDER") {
+                            checkType = (item.job == null && item.type == 'FOLDER');
                         } else {
                             checkType = false;
                         }
@@ -464,9 +475,11 @@
                         if (type === "ALL") {
                             checkType = true;
                         } else if (type === "JOB") {
-                            checkType = (item.job && item.job !== null);
-                        } else if (type === "FILE" || type === "FOLDER") {
-                            checkType = (item.type === type);
+                            checkType = (item.job != null);
+                        } else if (type === "FILE") {
+                            checkType = (item.type == 'FILE');
+                        } else if (type === "FOLDER") {
+                            checkType = (item.job == null && item.type == 'FOLDER');
                         } else {
                             checkType = false;
                         }
@@ -532,6 +545,15 @@
                 } else {
                     return viewMode;
                 }
+            },
+            compColumTitleWidth: function(column) {
+                var c = column.width;
+                if (column.icon != null) {
+                    c += 20;
+                } else {
+                    c += 7;
+                }
+                return c;
             },
             handleViewInfo: function(e) {
                 if (this.selected != null) {
@@ -678,6 +700,18 @@
                                 return new Date(a.createdAt) - new Date(b.createdAt);
                             }
                         }
+                        break;
+                    case "updatedAt":
+                        if (sortASC) {
+                            return function(a, b) {
+                                return new Date(b.updatedAt) - new Date(a.updatedAt);
+                            }
+                        } else {
+                            return function(a, b) {
+                                return new Date(a.updatedAt) - new Date(b.updatedAt);
+                            }
+                        }
+                        break;
                     default:
                         if (sortASC) {
                             return function(a, b) {
