--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -873,6 +873,7 @@
                 this.viewDataChanged();
             },
             clear: function() {
+                this.request = null;
                 this.data = [];
                 this.viewData = [];
                 this.currentPage = 1;
@@ -920,7 +921,6 @@
                     //                args.request.error(this);
                 };
                 if (this.request.url && this.request.url != "") {
-
                     var url = stv.utils.addQueryParamtersToUrl({
                         skip: ((this.currentPage - 1) * this.pageSize),
                         limit: this.pageSize
