--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -45,8 +45,9 @@
             box-sizing: border-box;
             height: 20px;
             padding: 0 7px;
-            border-top: 1px solid rgba(130, 130, 130, 0.2);
+            border-top: 1px solid rgba(130, 130, 130, 0.5);
             color: var(--secondary-text-color);
+            background-color: var(--hover-color);
         }
 
         #main {
