--- a/src/ontology/stv-hpo-local.html
+++ b/src/ontology/stv-hpo-local.html
@@ -1,5 +1,5 @@
-<link rel="import" href="stv-ontology-tree.html">
-<link rel="import" href="stv-ontology-tree-item.html">
+<link rel="import" href="stv-ontology-tree-local.html">
+<link rel="import" href="stv-ontology-tree-item-local.html">
 
 <dom-module id="stv-hpo-local">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
@@ -112,8 +112,8 @@
         </div>
         <div hidden$="{{!computeView(view, 'hierarchy')}}" style="width: 95%">
             <div class="treeHPO">
-                <stv-ontology-tree id="treeHPO">
-                </stv-ontology-tree>
+                <stv-ontology-tree-local id="treeHPO">
+                </stv-ontology-tree-local>
             </div>
             <div class="horizontal layout flex" style="width: 100%">
                 <div class="flex">
