Show file count on folder list.

--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -206,7 +206,7 @@
                 <div class="resizer" id="mainmenuresizer"></div>
             </div>
             <div id="maincontent">
-                <stv-folder-list id="folderList" user-data="{{userData}}" search-by-type="{{searchByType}}" search-by="{{searchBy}}" on-fileselect="handleFileSelect" on-upload-file="handleUploadFile" on-back="handleBackFolder" on-need-refresh="handleNeedRefresh" folder="{{folder}}" files="{{filteredFiles}}" mode="{{mode}}" on-filedblclick="handleFileDblClick" on-previewfile="handlePreviewFile" disable-icon-view="{{disableIconView}}" columns="{{columns}}" hide-file-column="{{hideFileColumn}}" hide-upload-btn="{{hideUploadBtn}}">
+                <stv-folder-list id="folderList" user-data="{{userData}}" search-by-type="{{searchByType}}" search-by="{{searchBy}}" on-fileselect="handleFileSelect" on-upload-file="handleUploadFile" on-back="handleBackFolder" on-need-refresh="handleNeedRefresh" folder="{{folder}}" files="{{filteredFiles}}" mode="{{mode}}" on-filedblclick="handleFileDblClick" on-previewfile="handlePreviewFile" disable-icon-view="{{disableIconView}}" columns="{{columns}}" hide-file-column="{{hideFileColumn}}" hide-upload-btn="{{hideUploadBtn}}" hide-download-btn="{{hideDownloadBtn}}">
                 </stv-folder-list>
             </div>
         </div>
@@ -359,6 +359,11 @@
                 reflectToAttribute: true
             },
             hideUploadBtn: {
+                type: Boolean,
+                value: false,
+                reflectToAttribute: true
+            },
+            hideDownloadBtn: {
                 type: Boolean,
                 value: false,
                 reflectToAttribute: true
