--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -216,10 +216,10 @@
             <div class="flex"></div>
             <content id="customButtons" select=".custom-button"></content>
             <div id="searchBar" class="horizontal layout">
-                <div class="stv-btn stv-btn-shdw file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'all')}}" data-value="all">All</div>
-                <div class="stv-btn stv-btn-shdw file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'job')}}" data-value="job"><i class="fa fa-flask"></i></div>
-                <div class="stv-btn stv-btn-shdw file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'folder')}}" data-value="folder"><i class="fa fa-folder"></i></div>
-                <div class="stv-btn stv-btn-shdw file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'file')}}" data-value="file"><i class="fa fa-file"></i></div>
+                <div hidden="{{hideFilterBtns}}" class="stv-btn stv-btn-shdw filter-file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'all')}}" data-value="all">All</div>
+                <div hidden="{{hideFilterBtns}}"class="stv-btn stv-btn-shdw filter-file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'job')}}" data-value="job"><i class="fa fa-flask"></i></div>
+                <div hidden="{{hideFilterBtns}}"class="stv-btn stv-btn-shdw filter-file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'folder')}}" data-value="folder"><i class="fa fa-folder"></i></div>
+                <div hidden="{{hideFilterBtns}}"class="stv-btn stv-btn-shdw filter-file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'file')}}" data-value="file"><i class="fa fa-file"></i></div>
                 <div class="flex" style="margin-left:5px;">
                     <input id="searchInput" class="stv" type="text" style="width:100%;" placeholder="Search by name..." value="{{searchBy::input}}">
                 </div>
@@ -342,7 +342,9 @@
             },
             searchByType: {
                 type: String,
-                value: "all",
+                value: function() {
+                    return ["all"];
+                },
                 reflectToAttribute: true
             },
             hideTree: {
@@ -364,6 +366,11 @@
                 reflectToAttribute: true
             },
             hideDownloadBtn: {
+                type: Boolean,
+                value: false,
+                reflectToAttribute: true
+            },
+            hideFilterBtns: {
                 type: Boolean,
                 value: false,
                 reflectToAttribute: true
@@ -751,10 +758,33 @@
             }
         },
         handleSearchByType: function(e) {
-            this.searchByType = e.currentTarget.dataset.value;
+            var typeClicked = e.currentTarget.dataset.value;
+            if (typeClicked == 'all') {
+                this.set('searchByType', ['all']);
+            } else {
+                var aux = [];
+                for (var i = 0; i < this.searchByType.length; i++) {
+                    var it = this.searchByType[i];
+                    if (it != 'all') {
+                        aux.push(it);
+                    }
+                }
+                var idx = aux.indexOf(typeClicked);
+                if (idx == -1) {
+                    aux.push(typeClicked);
+                } else {
+                    aux.splice(idx, 1);
+                }
+                this.set('searchByType', aux);
+            }
         },
         computeSearchByType: function(type, value) {
-            return type === value;
+            var idx = this.searchByType.indexOf(value);
+            if (idx == -1) {
+                return false;
+            } else {
+                return true;
+            }
         },
         computeSize: function(userData, size) {
             return stv.utils.humanFileSize(size);
